objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WT Easy Access Loan</fullName>
        <description>Sales process for Easy Access Loans</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>10%2E Submitted For Booking</fullName>
        </values>
        <values>
            <fullName>11%2E Loan Booked</fullName>
        </values>
        <values>
            <fullName>12%2E Loan Lost%2FDenied</fullName>
        </values>
        <values>
            <fullName>2%2E Company Information Collected</fullName>
        </values>
        <values>
            <fullName>3%2E Opportunity Sent For Processing</fullName>
        </values>
        <values>
            <fullName>4%2E Opportunity In Initial Review</fullName>
        </values>
        <values>
            <fullName>5%2E Opportunity Incomplete</fullName>
        </values>
        <values>
            <fullName>6%2E Opportunity In Underwriting</fullName>
        </values>
        <values>
            <fullName>7%2E Opportunity Approved</fullName>
        </values>
        <values>
            <fullName>8%2E Opportunity In Pre-Close</fullName>
        </values>
        <values>
            <fullName>9%2E Opportunity Pending Signed Documents</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WT Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Stage 1 - Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Stage 2 - Company Information Obtained%2FNeeds Assessed</fullName>
        </values>
        <values>
            <fullName>Stage 3 - Deal Structured%2FPresented</fullName>
        </values>
        <values>
            <fullName>Stage 4 - Deal Accepted%2FCommitment</fullName>
        </values>
        <values>
            <fullName>Stage 5 - Deal Approved</fullName>
        </values>
        <values>
            <fullName>Stage 6 - Deal Booked%2FClosed</fullName>
        </values>
        <values>
            <fullName>Stage 7 - Deal Lost or Declined</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Opportunities</relationshipLabel>
        <relationshipName>HouseholdOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>OpportunityContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ABL_Component__c</fullName>
        <label>ABL Component?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Actual_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Changes_to_TM_Onboarding_Process__c</fullName>
        <label>Changes to TM Onboarding Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Changes to Automatic Onboarding Process</fullName>
                </value>
                <value>
                    <fullName>Manual Change - Do NOT kick off process with fee over threshold</fullName>
                </value>
                <value>
                    <fullName>Manual Change - Kick off process with fee under threshold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Closer_Manager_User_Role_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closer Manager User Role Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Closer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Closer_User_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closer User Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>WT_Competitor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Credit_Analyst_Manager_User_Role_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Analyst Manager User Role Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Credit_Analyst_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Analyst Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Credit_Analyst_User_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Analyst User Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Date_of_Last_Stage_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Last Stage Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Deposits__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;Deposits&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Fee__c</fullName>
        <label>Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Franchise_Component__c</fullName>
        <label>Franchise Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Franchise_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Franchise Type</label>
        <referenceTo>WT_Franchise_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_GL_Invest__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;GL Invest&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Invest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Initial_Amount_Drawn__c</fullName>
        <label>Initial Amount Drawn $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_International_Fee__c</fullName>
        <label>International Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Investment_Fee__c</fullName>
        <label>Investment Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Involves_any_of_the_product_partner__c</fullName>
        <label>Involves any of the product partner?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABL</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Syndication</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Is_Closer_Manager_User__c</fullName>
        <formula>IF(CONTAINS(WT_Closer_Manager_User_Role_Ids__c, $UserRole.Id),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closer Manager User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Closer_User__c</fullName>
        <formula>IF(CONTAINS(WT_Closer_User_Ids__c, $User.Id ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closer User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Credit_Analyst_Manager_User__c</fullName>
        <formula>IF(CONTAINS(WT_Credit_Analyst_Manager_User_Role_Ids__c, $UserRole.Id),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Credit Analyst Manager User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Credit_Analyst_User__c</fullName>
        <formula>IF(CONTAINS(WT_Credit_Analyst_User_Ids__c, $User.Id ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Credit Analyst User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Manager__c</fullName>
        <description>Formula field to check if current user is the manager of the opportunity’s owner</description>
        <formula>IF(Owner.ManagerId = $User.Id,True,False)</formula>
        <label>Is Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Processor_Manager_User__c</fullName>
        <formula>IF(CONTAINS(WT_Processor_Manager_User_Role_Ids__c, $UserRole.Id),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Processor Manager User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Processor_User__c</fullName>
        <formula>IF(CONTAINS(WT_Processor_User_Ids__c, $User.Id ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Processor User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Product_Partner__c</fullName>
        <formula>IF(CONTAINS( WT_Product_Partners__c  , $User.Id),True,False)</formula>
        <label>Is Product Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Shared_Credit_User_Manager__c</fullName>
        <formula>IF(CONTAINS( WT_Shared_Credit_User_Managers__c , $UserRole.Id  ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shared Credit User Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Shared_Credit__c</fullName>
        <formula>IF(CONTAINS(WT_Shared_Credit_Users__c , $User.Id ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shared Credit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Leasing_PV_Rent__c</fullName>
        <label>Leasing PV Rent $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Leasing_PV_Residual__c</fullName>
        <label>Leasing PV Residual $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Leasing_Rate__c</fullName>
        <label>Leasing Rate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_Leasing_Team_in_months__c</fullName>
        <label>Leasing Team (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Loans__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;Loans&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_New_Dollar__c</fullName>
        <label>New $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Opportunity_Owner_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Opportunity_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Other__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;Other&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Owner_Charter__c</fullName>
        <formula>Owner.WT_Charter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Charter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Probability__c</fullName>
        <description>created as part of 1170</description>
        <label>Probability (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <isActive>false</isActive>
                    <label>35</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Processor_Manager_User_Role_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processor Manager User Role Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Processor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Processor_User_Ids__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processor User Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Product_Partner_Name__c</fullName>
        <description>This field is to hold the user names that are listed as product partner in Opportunity Team.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Product_Partners__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Product_Type__c</fullName>
        <description>Formula filed to group Product for Reporting</description>
        <formula>CASE( WT_Product__r.Name , &apos;Wealth Services - Loan&apos;, &apos;Loans&apos;, 
                          &apos;Wealth Services - Deposit&apos;, &apos;Deposits&apos;,
                          &apos;Investment - WWM&apos;, &apos;WH Invest&apos;,
                          &apos;Investment - Great Lakes Advisors&apos;, &apos;GL Invest&apos;,
                          &apos;Trust - Chicago Trust Company&apos;, &apos;Trust&apos;,
	                  &apos;Other&apos; )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of 1142</description>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.WT_Record_Type_Name__c</field>
                <operation>equals</operation>
                <valueField>Product2.Family</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Product_for_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for Flow purpose only. Should not be referenced for data purpose, 
should not use for reports</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities (Product)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Purpose__c</fullName>
        <description>Purpose of the opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Record_Type_Name__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit (Standby)</fullName>
                </value>
                <value>
                    <fullName>Terafina</fullName>
                </value>
                <value>
                    <fullName>Easy Access Loan</fullName>
                </value>
                <value>
                    <fullName>Deposit,Loan,International,Investment,TM,Other,Letter of Credit (Standby),Leasing</fullName>
                    <isActive>false</isActive>
                    <label>Deposit,Loan,International,Investment,TM,Other,Letter of Credit (Standby),Leasing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Group Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Renewal__c</fullName>
        <label>Renewal $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_SBA_Component__c</fullName>
        <description>Created as part of DBSFCRM-</description>
        <label>SBA Component?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_SBA_Type__c</fullName>
        <label>SBA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBA 504 Loan</fullName>
                </value>
                <value>
                    <fullName>SBA 7A Loan</fullName>
                </value>
                <value>
                    <fullName>SBA CAP Line</fullName>
                </value>
                <value>
                    <fullName>SBA Express Loan</fullName>
                </value>
                <value>
                    <fullName>SBA Illinois Advantage</fullName>
                </value>
                <value>
                    <fullName>SBA Int&apos;l Export Express</fullName>
                </value>
                <value>
                    <fullName>SBA Int&apos;l Working Capital Guarantee</fullName>
                </value>
                <value>
                    <fullName>SBA USDA B&amp;I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Shared_Credit_User_Managers__c</fullName>
        <description>Custom field to capture all Shared Credit Users Manager names.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shared Credit User Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Shared_Credit_Users__c</fullName>
        <description>Custom field to capture all  Shared Credit users.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shared Credit Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WT_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Declined - Credit</fullName>
                </value>
                <value>
                    <fullName>Declined - Pricing</fullName>
                </value>
                <value>
                    <fullName>Declined - Other</fullName>
                </value>
                <value>
                    <fullName>Rejected - Credit Structure</fullName>
                </value>
                <value>
                    <fullName>Rejected - Pricing</fullName>
                </value>
                <value>
                    <fullName>Rejected - Incumbent Response</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Fell Through</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Lost to purchase</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Other</fullName>
                </value>
                <value>
                    <fullName>Automatic Deactivation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Declied - Credit</fullName>
                    <isActive>false</isActive>
                    <label>Declied - Credit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed/Won</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Swap_Component__c</fullName>
        <label>Swap Component?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Swap_Fee__c</fullName>
        <label>Swap Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Syndication_Component__c</fullName>
        <label>Syndication Component?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Syndication_Fee__c</fullName>
        <label>Syndication Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Syndication_Target_Sale__c</fullName>
        <label>Syndication Target Sale $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Syndication_WTFC_Role__c</fullName>
        <label>Syndication WTFC Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Underwritten</fullName>
                </value>
                <value>
                    <fullName>Best Efforts</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_TMIS_Add_on_Products__c</fullName>
        <label>TMIS # Add-on Products &amp; Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_TMOnboarding_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TM Onboarding Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_TM_Onboarding_Workflow_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TM Onboarding Workflow Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Trust__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;Trust&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_WH_Invest__c</fullName>
        <formula>IF( WT_Product_Type__c=&apos;WH Invest&apos;, WT_New_Dollar__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WH Invest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Y1_Avg_Expected_Balance__c</fullName>
        <label>Y1 Avg Expected Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>WT_Product__c</columns>
        <columns>WT_Product_Type__c</columns>
        <columns>WT_Loans__c</columns>
        <columns>WT_Deposits__c</columns>
        <columns>WT_GL_Invest__c</columns>
        <columns>WT_WH_Invest__c</columns>
        <columns>WT_Other__c</columns>
        <columns>WT_New_Dollar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
</CustomObject>